Update button styles, fix form spacing

--- a/styles/contactStyle.css
+++ b/styles/contactStyle.css
@@ -17,12 +17,27 @@
 
 /* Body and Spacing Styles */
 
-div.formContainer {
+div#formContainerLeft {
     display: block;
     float: left;
-    width: 40%;
+    width: 44%;
     margin-left: 5%;
+    margin-right: 1%;
+}
+
+div#formContainerRight {
+    display: block;
+    float: left;
+    width: 44%;
+    margin-left: 1%;
     margin-right: 5%;
+}
+
+div#buttons {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 /* Text Styles */
@@ -39,7 +54,7 @@ fieldset {
     font-family: Tinos, Georgia, 'Times New Roman', Times, serif;
     font-size: large;
     color: black;
-    margin: 2em auto;
+    margin: 2em auto .3em auto;
 }
 
 legend {
@@ -47,6 +62,7 @@ legend {
     color: beige;
     font-family: Oswald, Verdana, Geneva, Tahoma, sans-serif;
     font-size: larger;
+    margin-left: 5%;
     padding: .3em;
     box-shadow: black 1px 1px 1px;
 }
@@ -60,9 +76,10 @@ input {
     margin-top: .4em;
 }
 
-/* List Styles */
-
-
-
-/* Divider Styles */
-
+/* Button Styles */
+button {
+    text-align: center;
+    font-family: Oswald, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+    margin: .2em .4em;
+}
